classDiagram

namespace Entities {
    class User {
        +number id
        +string name
        +string email
        +string passwordHash
        +UserRole role
    }

    class FirstAidKit {
        +string id
        +string code
        +string location
        +Date createdAt
    }

    class Entry {
        +string id
        +Date occurredAt
        +string incident
        +string firstAider
        +string description
        +string? measures
        +MaterialItem[] materialList
        +string? message
        +string? witness
    }

    class MaterialItem {
        <<interface>>
        +string type
        +number quantity
    }

    class Product {
        +string id
        +string type
    }

}

namespace Auth {
    class UserRole {
        <<enumeration>>
        REPORTER
        ADMIN
    }

    class AuthPayload {
        +number userId
        +UserRole role
    }

    class AuthMiddleware {
        +authenticate(req, res, next) void
        +authorize(...roles) Middleware
    }
}

namespace Services {
    class UserService {
        +createUser(name, email, password, role) User
        +login(email, password) LoginResult
        +getUser(id?) User | User[]
        +deleteUser(id) void
        +verifyToken(token) AuthPayload
    }
}

namespace Controller {
    class AuthController {
        +authRegister(req, res) void
        +authLogin(req, res) void
    }

    class UserController {
        +userGetAll(req, res) void
        +userGet(req, res) void
        +userDelete(req, res) void
    }

    class EntryController {
        +entryCreate(req, res) void
        +entryGetAll(req, res) void
        +entryGet(req, res) void
        +entryUpdate(req, res) void
        +entryDelete(req, res) void
    }

    class FirstAidKitController {
        +firstAidKitCreate(req, res) void
        +firstAidKitGetAll(req, res) void
        +firstAidKitGet(req, res) void
        +firstAidKitUpdate(req, res) void
        +firstAidKitDelete(req, res) void
    }

    class ProductController {
        +productCreate(req, res) void
        +productGetAll(req, res) void
        +productGet(req, res) void
        +productUpdate(req, res) void
        +productDelete(req, res) void
    }
}

%% ─── Entity Relationships ───────────────────────────────────
User "1" --> "0..*" Entry : creates
FirstAidKit "1" --> "0..*" Entry : contains
Entry "1" --> "0..*" MaterialItem : contains

%% ─── Layer Dependencies ──────────────────────────────────────
AuthController ..> UserService : uses
UserController ..> UserService : uses
UserController ..> User : manages
EntryController ..> Entry : manages
FirstAidKitController ..> FirstAidKit : manages
ProductController ..> Product : manages

AuthMiddleware ..> UserService : verifyToken
AuthMiddleware ..> AuthPayload : produces

UserService ..> AuthPayload : returns
User --> UserRole : has
